--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "@react-native-community/cli": "^13.6.9",
-    "expo": "~51.0.10",
+    "expo": "~51.0.11",
     "expo-constants": "^16.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@expo/metro-runtime": "^3.2.1"
   },
   "private": true
 }
