--- a/package.json
+++ b/package.json
@@ -6,22 +6,25 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "format": "prettier --write src/**/*.js App.js",
+    "check": "prettier --check src/**/*.js App.js"
   },
   "dependencies": {
     "@react-native-community/cli": "^13.6.9",
     "expo": "~51.0.11",
     "expo-constants": "^16.0.2",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.17",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
-    "react-native-web": "~0.19.10",
-    "expo-updates": "~0.25.17"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@expo/metro-runtime": "^3.2.1"
+    "@expo/metro-runtime": "^3.2.1",
+    "prettier": "^3.3.2"
   },
   "private": true
 }
