--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -1,33 +1,39 @@
 name: preview
-on: [pull_request, workflow_dispatch]
+on:
+  # This workflow should only be run on trusted pull requests
+  pull_request_target:
+    types: [opened, synchronize]
 
 jobs:
   update:
     name: EAS Update
+    if: |
+      github.event.pull_request.author_association == 'MEMBER' ||
+      github.event.pull_request.author_association == 'COLLABORATOR'
     runs-on: ubuntu-latest
     permissions:
       contents: read
       pull-requests: write
     steps:
-        - name: Checkout repository
-          uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         
-        - name: Set up Node.js
-          uses: actions/setup-node@v4
-          with:
-            node-version: 20.x
-            cache: npm
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+          cache: npm
 
-        - name: Set up EAS
-          uses: expo/expo-github-action@v8
-          with:
-            eas-version: latest
-            token: ${{ secrets.EXPO_TOKEN }}
+      - name: Set up EAS
+        uses: expo/expo-github-action@v8
+        with:
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
 
-        - name: Install dependencies
-          run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-        - name: Create preview
-          uses: expo/expo-github-action/preview@v8
-          with:
-            command: eas update --auto
+      - name: Create preview
+        uses: expo/expo-github-action/preview@v8
+        with:
+          command: eas update --auto
