--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -1,10 +1,11 @@
 name: style
 on:
   pull_request:
-    branches: [main]
+    branches:
+      - main
   push:
-    branches: [main]
-  workflow_dispatch:
+    branches:
+      - main
 
 jobs:
   style:
