Configure iOS EAS Build

--- a/eas.json
+++ b/eas.json
@@ -2,7 +2,10 @@
   "build": {
     "preview": {
       "distribution": "internal",
-      "channel": "preview"
+      "channel": "preview",
+      "ios": {
+        "simulator": true
+      }
     }
   }
 }
