--- a/package.json
+++ b/package.json
@@ -22,11 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
-    "react-native-linear-gradient": "^2.8.3",
-    "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "react-navigation": "^5.0.0"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
