--- a/app.json
+++ b/app.json
@@ -1,35 +1,28 @@
 {
   "expo": {
-    "name": "Audacity Music Club",
-    "slug": "audacity-music-club",
+    "name": "Test",
+    "slug": "Test",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/audacity-music-club.png",
+    "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./src/assets/audacity-music-club.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "org.eternityband.signup"
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./src/assets/audacity-music-club.png",
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "org.eternityband.signup"
+      "package": "com.pmaddineedi.Test"
     },
     "web": {
-      "favicon": "./src/assets/audacity-music-club.png"
-    },
-    "extra": {
-      "eas": {
-        "projectId": "56bb99cb-9cbe-423d-9a88-3f82a0cf3aa0"
-      }
-    },
-    "owner": "audacitymusic"
+      "favicon": "./assets/favicon.png"
+    }
   }
 }
