--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
     "format": "prettier --write src/**/*.js App.js",
     "check": "prettier --check src/**/*.js App.js"
   },
