--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,9 +83,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.pmaddineedi.Test'
+    namespace 'org.eternityband.signup'
     defaultConfig {
-        applicationId 'com.pmaddineedi.Test'
+        applicationId 'org.eternityband.signup'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
