--- a/package.json
+++ b/package.json
@@ -11,22 +11,20 @@
     "check": "prettier --check src/**/*.js App.js"
   },
   "dependencies": {
-    "@react-native-community/cli": "^13.6.9",
+    "@expo/metro-runtime": "^3.2.1",
     "@react-navigation/native": "^6.1.17",
-    "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~51.0.11",
+    "@react-navigation/native-stack": "^6.10.0",
+    "expo": "~51.0.17",
     "expo-constants": "^16.0.2",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.17",
-    "react": "^18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.2.0",
     "react-native": "0.74.2",
-    "react-native-screens": "3.31.1"
+    "react-native-safe-area-context": "^4.10.7",
+    "react-native-screens": "^3.32.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@expo/metro-runtime": "^3.2.1",
     "prettier": "^3.3.2"
   },
   "private": true
