--- a/ios/AudacityMusicClub/Info.plist
+++ b/ios/AudacityMusicClub/Info.plist
@@ -30,6 +30,12 @@
           <string>org.eternityband.signup</string>
         </array>
       </dict>
+      <dict>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>com.googleusercontent.apps.761199370622-qdq0afvq19r47p34rgjsso84leub5dlj</string>
+        </array>
+      </dict>
     </array>
     <key>CFBundleVersion</key>
     <string>1</string>
