--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-document-picker": "^9.3.0",
     "react-native-safe-area-context": "^4.10.7",
     "react-native-screens": "^3.32.0"
   },
