--- a/package.json
+++ b/package.json
@@ -7,29 +7,32 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
+    "doctor": "node --env-file=.env -r expo-doctor -e ''",
     "format": "prettier --write src/**/*.js App.js",
     "check": "prettier --check src/**/*.js App.js"
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.2.1",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/cli-server-api": "^13.6.9",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
-    "expo": "~51.0.17",
+    "expo": "~51.0.21",
     "expo-checkbox": "~3.0.0",
     "expo-constants": "^16.0.2",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.3",
     "react-native-document-picker": "^9.3.0",
-    "react-native-safe-area-context": "^4.10.7",
-    "react-native-screens": "^3.32.0"
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "expo-dev-client": "^4.0.20",
+    "expo-doctor": "^1.6.1",
     "prettier": "^3.3.2"
   },
   "private": true
