--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "expo-constants": "^16.0.2",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
+    "public-google-sheets-parser": "^1.5.4",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-document-picker": "^9.3.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1"
   },
