Fix GitHub CI for env variables

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -29,3 +29,5 @@ jobs:
 
       - name: Publish update
         run: eas update --auto
+        env:
+          EXPO_PUBLIC_GOOGLE_OAUTH_IOS_SCHEME: ${{ secrets.EXPO_PUBLIC_GOOGLE_OAUTH_IOS_SCHEME }}
