--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -33,3 +33,5 @@ jobs:
         uses: expo/expo-github-action/preview@v8
         with:
           command: eas update --auto
+        env:
+          EXPO_PUBLIC_GOOGLE_OAUTH_IOS_SCHEME: ${{ secrets.EXPO_PUBLIC_GOOGLE_OAUTH_IOS_SCHEME }}
