--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-document-picker": "^9.3.0",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-reanimated": "^3.14.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1"
   },
