--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-animated-dots-carousel": "^1.0.2",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-reanimated": "^3.14.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.10.7",
-    "react-native-screens": "^3.32.0",
-    "react-native-snap-carousel": "^3.9.1"
+    "react-native-screens": "^3.32.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
