--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-animated-dots-carousel": "^1.0.2",
     "react-native-document-picker": "^9.3.0",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-reanimated": "^3.14.0",
