--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
-    "expo": "~51.0.22",
+    "expo": "~51.0.21",
     "expo-checkbox": "~3.0.0",
     "expo-constants": "^16.0.2",
     "expo-linear-gradient": "^13.0.2",
@@ -27,8 +27,8 @@
     "react-native": "0.74.3",
     "react-native-animated-dots-carousel": "^1.0.2",
     "react-native-document-picker": "^9.3.0",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-gesture-handler": "^2.17.1",
+    "react-native-reanimated": "^3.14.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1"
