--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
+    "@robinbobin/react-native-google-drive-api-wrapper": "^1.2.4",
     "expo": "~51.0.21",
     "expo-checkbox": "~3.0.0",
     "expo-constants": "^16.0.2",
@@ -27,6 +28,7 @@
     "react-native": "0.74.3",
     "react-native-animated-dots-carousel": "^1.0.2",
     "react-native-document-picker": "^9.3.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-reanimated": "^3.14.0",
     "react-native-reanimated-carousel": "^3.5.1",
