--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-constants": "^16.0.2",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
+    "netinfo": "^0.1.3",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-animated-dots-carousel": "^1.0.2",
