--- a/package.json
+++ b/package.json
@@ -12,33 +12,34 @@
     "check": "prettier --check src/**/*.js App.js"
   },
   "dependencies": {
-    "@expo/metro-runtime": "^3.2.1",
+    "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/cli-server-api": "^13.6.9",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "@robinbobin/react-native-google-drive-api-wrapper": "^1.2.4",
-    "expo": "~51.0.21",
+    "expo": "~51.0.28",
     "expo-checkbox": "~3.0.0",
     "expo-constants": "^16.0.2",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "0.74.5",
     "react-native-animated-dots-carousel": "^1.0.2",
     "react-native-document-picker": "^9.3.0",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "^2.17.1",
-    "react-native-reanimated": "^3.14.0",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-webview": "^13.10.5"
+    "react-native-webview": "13.8.6",
+    "expo-updates": "~0.25.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "expo-dev-client": "^4.0.20",
+    "expo-dev-client": "~4.0.23",
     "expo-doctor": "^1.6.1",
     "prettier": "^3.3.2"
   },
