--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ web-build/
 *.p12
 *.key
 *.mobileprovision
+*.aab
+*.ipa
 
 # Metro
 .metro-health-check*
@@ -29,7 +31,7 @@ yarn-error.*
 *.pem
 
 # env files
-.env
+.env*
 .env*.local
 
 # typescript
