--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-animated-dots-carousel": "^1.0.2",
+    "react-native-date-picker": "^5.0.4",
     "react-native-document-picker": "^9.3.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
