--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-constants": "^16.0.2",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.22",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-animated-dots-carousel": "^1.0.2",
@@ -36,7 +37,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-webview": "13.8.6",
-    "expo-updates": "~0.25.22"
+    "expo-apple-authentication": "~6.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
