--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@react-navigation/native-stack": "^6.10.0",
     "@robinbobin/react-native-google-drive-api-wrapper": "^1.2.4",
     "expo": "~51.0.28",
+    "expo-apple-authentication": "~6.4.2",
     "expo-checkbox": "~3.0.0",
     "expo-constants": "^16.0.2",
+    "expo-image": "~1.13.0",
     "expo-linear-gradient": "^13.0.2",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.22",
@@ -36,8 +38,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-webview": "13.8.6",
-    "expo-apple-authentication": "~6.4.2"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
