--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "checkJs": true,
-        "jsx": "react-jsx",
+        "jsx": "react-native",
     },
     "exclude": ["dist", "node_modules"],
 }
