--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react": "^18.3.11",
     "expo-dev-client": "~4.0.23",
     "expo-doctor": "^1.6.1",
     "prettier": "^3.3.2"
