--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-constants": "^16.0.2",
     "expo-image": "~1.13.0",
     "expo-linear-gradient": "^13.0.2",
+    "expo-notifications": "~0.28.19",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.22",
     "react": "18.2.0",
