--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/cli-server-api": "^13.6.9",
     "@react-native-google-signin/google-signin": "^12.2.1",
+    "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "@robinbobin/react-native-google-drive-api-wrapper": "^1.2.4",
@@ -28,6 +29,7 @@
     "expo-notifications": "~0.28.19",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.22",
+    "fuse.js": "^7.1.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-animated-dots-carousel": "^1.0.2",
@@ -35,6 +37,7 @@
     "react-native-document-picker": "^9.3.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-multiple-select": "^0.5.12",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
