--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-animated-dots-carousel": "^1.0.2",
     "react-native-date-picker": "^5.0.4",
     "react-native-document-picker": "^9.3.0",
+    "react-native-error-boundary": "^2.0.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
