--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-animated-dots-carousel": "^1.0.2",
     "react-native-date-picker": "^5.0.4",
     "react-native-document-picker": "^9.3.0",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-multiple-select": "^0.5.12",
@@ -42,6 +43,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-super-grid": "^6.0.1",
     "react-native-webview": "13.8.6"
   },
   "devDependencies": {
