--- a/package.json
+++ b/package.json
@@ -50,5 +50,8 @@
     "expo-doctor": "^1.6.1",
     "prettier": "^3.3.2"
   },
+  "overrides": {
+    "metro": "^0.83.1"
+  },
   "private": true
 }
