--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,15 +1,7 @@
 {
   "compilerOptions": {
     "checkJs": true,
-    "jsx": "react-native",
-    "target": "ES2017",
-    "lib": ["ES2017", "DOM"],
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "types": ["node"]
+    "jsx": "react-native"
   },
   "exclude": ["dist", "node_modules"]
 }
