--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-apple-authentication": "~6.4.2",
     "expo-checkbox": "~3.0.0",
     "expo-constants": "^16.0.2",
+    "expo-dev-client": "~4.0.29",
     "expo-image": "~1.13.0",
     "expo-linear-gradient": "^13.0.2",
     "expo-notifications": "~0.28.19",
@@ -35,6 +36,7 @@
     "react-native-document-picker": "^9.3.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
