--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web",
     "doctor": "node --env-file=.env -r expo-doctor -e ''",
     "format": "prettier --write src/**/*.js App.js",
-    "check": "prettier --check src/**/*.js App.js"
+    "check": "prettier --check src/**/*.js App.js",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
@@ -51,10 +52,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@eslint/js": "^9.36.0",
     "@types/node": "^24.2.1",
     "@types/react": "^18.3.11",
+    "eslint": "^9.36.0",
+    "eslint-plugin-react": "^7.37.5",
     "expo-dev-client": "~4.0.23",
     "expo-doctor": "^1.6.1",
+    "globals": "^16.4.0",
     "prettier": "^3.3.2"
   },
   "private": true
