--- a/package.json
+++ b/package.json
@@ -41,13 +41,15 @@
     "react-native-element-dropdown": "^2.12.4",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-mail": "^6.1.1",
     "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-super-grid": "^6.0.1",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "13.8.6",
+    "expo-mail-composer": "~13.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
