--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "@robinbobin/react-native-google-drive-api-wrapper": "^1.2.4",
+    "dotenv": "^17.2.3",
     "expo": "~51.0.28",
     "expo-apple-authentication": "~6.4.2",
     "expo-checkbox": "~3.0.0",
