--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "@robinbobin/react-native-google-drive-api-wrapper": "^1.2.4",
+    "dotenv": "^17.2.3",
     "expo": "~51.0.28",
     "expo-apple-authentication": "~6.4.2",
     "expo-checkbox": "~3.0.0",
@@ -28,10 +29,13 @@
     "expo-dev-client": "~4.0.29",
     "expo-image": "~1.13.0",
     "expo-linear-gradient": "^13.0.2",
+    "expo-mail-composer": "~13.0.1",
     "expo-notifications": "~0.28.19",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.22",
+    "express": "^5.1.0",
     "fuse.js": "^7.1.0",
+    "nodemailer": "^7.0.10",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-animated-dots-carousel": "^1.0.2",
@@ -48,8 +52,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-super-grid": "^6.0.1",
-    "react-native-webview": "13.8.6",
-    "expo-mail-composer": "~13.0.1"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
