--- a/package.json
+++ b/package.json
@@ -12,49 +12,50 @@
     "check": "prettier --check src/**/*.js App.js"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@emailjs/react-native": "^5.1.0",
+    "@expo/metro-runtime": "~6.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/cli-server-api": "^13.6.9",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
-    "@react-native-picker/picker": "^2.11.1",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/core": "^7.12.4",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "@robinbobin/react-native-google-drive-api-wrapper": "^1.2.4",
     "expo": "^54.0.10",
-    "expo-apple-authentication": "~6.4.2",
-    "expo-checkbox": "~3.0.0",
-    "expo-constants": "^16.0.2",
-    "expo-dev-client": "~4.0.29",
-    "expo-image": "~1.13.0",
-    "expo-linear-gradient": "^13.0.2",
-    "expo-notifications": "~0.28.19",
-    "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.22",
+    "expo-apple-authentication": "~8.0.8",
+    "expo-checkbox": "~5.0.8",
+    "expo-constants": "~18.0.12",
+    "expo-dev-client": "~6.0.20",
+    "expo-image": "~3.0.11",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-notifications": "~0.32.15",
+    "expo-status-bar": "~3.0.9",
+    "expo-updates": "~29.0.15",
     "fuse.js": "^7.1.0",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-animated-dots-carousel": "^1.0.2",
-    "react-native-date-picker": "^5.0.4",
+    "react-native-date-picker": "^5.0.13",
     "react-native-document-picker": "^9.3.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-markdown-display": "^7.0.2",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "~4.1.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-super-grid": "^6.0.1",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/node": "^24.2.1",
-    "@types/react": "^18.3.11",
-    "expo-dev-client": "~4.0.23",
+    "@types/react": "~19.1.10",
     "expo-doctor": "^1.6.1",
     "prettier": "^3.3.2"
   },
