--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "@robinbobin/react-native-google-drive-api-wrapper": "^1.2.4",
-
     "expo": "^54.0.10",
     "expo-apple-authentication": "~8.0.8",
     "expo-checkbox": "~5.0.8",
@@ -37,12 +36,12 @@
     "fuse.js": "^7.1.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
-
     "react-native-animated-dots-carousel": "^1.0.2",
     "react-native-date-picker": "^5.0.13",
     "react-native-document-picker": "^9.3.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-element-dropdown": "^2.12.4",
+    "react-native-error-boundary": "^3.1.0",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-markdown-display": "^7.0.2",
@@ -56,6 +55,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@expo/ngrok": "^4.1.3",
+    "@react-native-community/cli": "^20.0.2",
     "@types/node": "^24.2.1",
     "@types/react": "~19.1.10",
     "expo-doctor": "^1.6.1",
